# brioche-registry

./: .dockerignore  .editorconfig  .env.example  .gitignore  Cargo.toml  Dockerfile  Makefile  docker-compose.yml  fly.toml  project.bri
.github/: dependabot.yml
.github/workflows/: cicd.yml
.sqlx/: query-0208f074cfe15731cb43a70e51e215dd528c1feeaaf6b16562bb1d6e3e1b212f.json  query-060cba2a643f78f3f38950207777581b74768d89e0053697ddabd0e238b58196.json  query-1aae1cd2a076ee803e5f3c3b115a57957a6eb9c7461dc7459c96e4ba3e6a290a.json  query-1d0e86151d5b09fc42563836480c678dcb231e88b76aa56e2f8df3b6378bd160.json  query-2d2e9faaf8c16e23d91ed01b1a705c948b790dd9d944aead3e8f9fd3deaa439f.json  query-306256f2b99beed257364ee352e08aaf633c2f3b5d2f675faf79a13ac0bb7679.json  query-3348a8306084f610262ee184b017423fd033b302e103bda4f1b2a9dc67d029b5.json  query-399099e2c7472caf9ba8ff973261cd654829840e22b75a2823f0251bbee6bb08.json  query-42d869f65e05b0df5db0f3fd3411daddf2cdcf0d428951180fc5e3947cec5380.json  query-446a6809b898283ffcbde10dc520a500b9ff094822d344b1958eea5c3b162e22.json  query-4a3ff0ce3a727a9d7867a254e37a4685e356155a3f93c7141b198987e7a272eb.json  query-4f61643285fda95568d4b56e79b0a20717cda121c1439833db401cf48cd99ea2.json  query-5170cfbbd45b7e25ef1be62db8334dcaba2d64c1ba5cf97cd12fd6e73f7f109f.json  query-5d5656f8192bc5515f96f1f915eb142471d4f4f8ea7fbe854d73a59e0263fb0d.json  query-60d73c4fd93b62f1b3604015268eaee310ac81b87ab077dbd3be8e84ea8109f8.json  query-61e21719e89990996062844cff542e0e53b36c0daa054bbd9b89bf6091755ecb.json  query-6de903c1422f23c6081f6917c23f4900c76359102eb3213f999fae91fae1d9b5.json  query-720268aa2c5df32e2e933e90d581a40091e85c182d33f90bbc129956fb9b87a2.json  query-74f7de0ae577e6064b79378f8b6213b1dd7bd89aef8d67f69def637ae9ba9602.json  query-77af24f9ab008412c68504ee76cf04e0d9d33dadab8574fbc2afa473d558e278.json  query-7c5c52e867d8ae8f83d757c12fb2619ff1270d2f3506b276b59a6064e19ca74c.json  query-87e377538ce5a9436f404cc1bb435d169671eed9a704bb4543c2500d5784ac67.json  query-89759fb8c365ff1428ceb4fe797ba401f3368e20e39d660f7af56514f32588fa.json  query-988a8cade80e713ec6af7e934ca0422169274bf90ec80e96f163370b963a15fc.json  query-9d259818ecd887a8fe3c38d549c275287580d9d179a365fd9d11041427b94d93.json  query-a2181daa81406a6ef0953e534d09a74934ea2df8e180f015687ca5c1c9d5a01a.json  query-a785e81d1102810127ca7a48981324db195a90e844becee2bf86d9305cc2b47e.json  query-b2ef810583029c3c370cb343885d5f1f833c9b40704abdaf09ff10daa70309ff.json  query-b6f8165d066b029c1ddcd0156995fd5ccabb08b212de4b4ac359b857631c5e45.json  query-be0994b127485533498730ddff30f349cd69a74c7e2bfb36af00c8b3b9c1e243.json  query-c1eea0ba725e4db51868ec90f7accdf9089854b53f4cde3cd4975f05535f51be.json  query-c37ccfe89f7cd757ab61f23b7c72488dd905235640f2ffe4f5330932aa43e4ef.json  query-c3e9a42dd1339df278510055592ef53c0d1032fc8f1e8ef2100aef6a0ca564b4.json  query-c59d1f9abc92f19a595fb84f09a844a255a3117e99ec69f5033fa4c4cfcd0fe0.json  query-cb84cfd63aef60e1bbac56ae1fd62a149f9735ae39f3d492b4d4af6d08619bba.json  query-e221224460358ce3c94731f39f5e3f2f6b2d37847815f44a46fbda55799cda1c.json  query-e8b5b8acb7b86a13325ec8d4543f6b82852087d41ef35243f90939a1df639780.json  query-f6e0ecc993f3ff1020de26e6e31b04096f71cc30f829fee4feb73c6b16e9c5a2.json  query-fbc0e378d3413aa04994e430ea028effa7f386b63fb25b4468f95cf78672edae.json  query-fdc995e9b21606d045d2a673ef38f31c0e18e72bbff76d988ccca5e7110f2a7b.json
data/: .gitignore
docker/: entrypoint.sh
docker/etc/litefs/: litefs-flyio.yml
migrations/: 20240406091633_initial_schema.sql  20240414055527_replace_blob_hashes_with_hex_text.sql  20240414091629_artifacts_and_resolves.sql  20240421051033_add_blobs_table.sql  20240428215211_rename_artifacts_to_recipes_and_resolves_to_bakes.sql  20240428234243_add_recipe_children.sql  20240609042511_initial_schema.sql
src/: blob.rs  main.rs  object_store.rs  recipe.rs  request_metadata.rs  server.rs
