[package]
name = "brioche-registry"
version = "0.1.0"
edition = "2024"
rust-version = "1.88"     # To align with the rust-toolchain.toml

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lints.clippy]
all = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }

[dependencies]
argon2 = { version = "0.5.3", features = ["std"] }
async-compression = { version = "0.4.27", features = ["tokio", "zstd"] }
async-trait = "0.1.88"
aws-config = "1.8.2"
aws-sdk-s3 = "1.98.0"
axum = "0.8.4"
axum-extra = { version = "0.10.1", features = ["tracing", "typed-header"] }
blake3 = "1.8.2"
brioche-core = { git = "https://github.com/brioche-dev/brioche.git" }
bstr = "1.12.0"
bytes = "1.10.1"
clap = { version = "4.5.41", features = ["derive"] }
color-eyre = "0.6.5"
dotenvy = "0.15.7"
envy = "0.4.2"
eyre = "0.6.12"
futures = "0.3.31"
http-body-util = "0.1.3"
joinery = "3.1.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.141"
serde_with = "3.14.0"
sqlx = { version = "0.8.6", features = [
    "runtime-tokio",
    "tls-rustls",
    "postgres",
    "macros",
    "migrate",
    "json",
] }
thiserror = "2.0.12"
tokio = { version = "1.46.1", features = ["full"] }
tokio-stream = "0.1.17"
tokio-util = { version = "0.7.15", features = ["io"] }
tower-http = { version = "0.6.6", features = ["trace"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
ulid = "1.2.1"
url = { version = "2.5.4", features = ["serde"] }
