[package]
name = "brioche-registry"
version = "0.1.0"
edition = "2024"
rust-version = "1.90"     # To align with the rust-toolchain.toml

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lints.clippy]
all = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }

[dependencies]
argon2 = { version = "0.5.3", features = ["std"] }
axum = "0.8.6"
axum-extra = { version = "0.10.3", features = ["tracing", "typed-header"] }
brioche-core = { git = "https://github.com/brioche-dev/brioche.git" }
bstr = "1.12.1"
clap = { version = "4.5.50", features = ["derive"] }
color-eyre = "0.6.5"
dotenvy = "0.15.7"
envy = "0.4.2"
eyre = "0.6.12"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.145"
sqlx = { version = "0.8.6", features = [
    "runtime-tokio",
    "tls-rustls",
    "postgres",
    "macros",
    "migrate",
    "json",
] }
thiserror = "2.0.17"
tokio = { version = "1.48.0", features = [
    "rt-multi-thread",
    "net",
    "signal",
    "sync",
] }
tower-http = { version = "0.6.6", features = ["trace"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter", "json"] }
ulid = "1.2.1"
url = { version = "2.5.7", features = ["serde"] }
